// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoData should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iVIXiF"
    >
      <div
        class="ant-space-item"
      >
        No data to display
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-1 iVIXiF"
    >
      <div
        class="ant-space-item"
      >
        No data available
      </div>
    </div>
  </div>
</DocumentFragment>
`;
